--- a/_posts/2016-04-14-work-log.md
+++ b/_posts/2016-04-14-work-log.md
@@ -29,4 +29,6 @@ title: 日常资料
 
 - 日常工具 : [http://silen.com.cn/a/2014/10/bookmarks.html](http://silen.com.cn/a/2014/10/bookmarks.html)
 
+- socket : [http://www.workerman.net](http://www.workerman.net)
+
 
